--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     hostname: mysql
     environment:
       - MYSQL_DATABASE=laravel
-      - MYSQL_ROOT_PASSWORD=example
+      - MYSQL_ROOT_PASSWORD=6Eu*76YTU!23uei
       - MYSQL_USER=root
-      - MYSQL_PASSWORD=example
+      - MYSQL_PASSWORD=6Eu*76YTU!23uei
     ports:
       - "3306:3306"
     volumes:
@@ -19,21 +19,21 @@ services:
       - ./databaseBackup/mysql:/var/backups/mysql:rw
     restart: always
 
-  pettycash:
-    container_name: petty_cash
+  prove:
+    container_name: prove
     build:
       context: ./src/PHP
       dockerfile: docker/Dockerfile
-    hostname: petty_cash
+    hostname: prove
     ports:
-      - "80:80"
+      - "50080:80"
     volumes:
     #   - ./configure.conf:/etc/temphawk/configure.conf:ro
       # - ./src/PHP/docker/php7.2/php.ini:/etc/php/7.2/apache2/php.ini:ro
-    #   - ./src/PHP/docker/docker-entrypoint.sh:/entrypoint.sh:ro
-    #  - ./src/PHP:/var/www/html/TemphawkWeb:rw
-      - ./log/PHP:/var/log/PettyCash
-      - ./log/PHP/log:/var/www/html/PettyCash/storage/logs
+      # - ./src/PHP/docker/docker-entrypoint.sh:/entrypoint.sh:ro
+      - ./src/PHP:/var/www/html/Prove:rw
+      # - ./log/PHP:/var/log/PHP
+      # - ./log/PHP/log:/var/www/html/PHP/storage/logs
     restart: always
     stdin_open: true
     tty: true
